data code behind

--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -3,7 +3,7 @@
 {{define "content"}}
 <h1>this is the about page</h1>
 <ul>
-    <li>Item A</li>
+    <li>{{index .StringMap "test"}}</li>
     <li>Item B</li>
     <li>Item C</li>
 </ul>
