--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -6,6 +6,7 @@
         <div class="col">
             <h1>this is the home page</h1>
             <p>Somme dummy paragraphe</p>
+            <p>{{index .StringMap "test"}}</p>
         </div>
     </div>
 {{end}}
